applications/catalog/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
    - guccidemo.ddnsking.com
  gateways:
    - istio-system/homelab-gateway
  http:
    - match:
        - uri:
            prefix: /catalog
      route:
        - destination:
            host: catalog
            port:
              number: 8080
